fix: remove the problemetic overflow property in the main-container

--- a/style.css
+++ b/style.css
@@ -55,7 +55,6 @@ button {
 }
 
 .main-container {
-  overflow: auto;
   max-height: 100vh;
 }
 
